<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/picCard"
    android:layout_width="match_parent"

    android:layout_height="@dimen/heigh_cardview"
    cardview:cardCornerRadius="@dimen/cornerRadius"
    android:layout_marginBottom="@dimen/activity_vertical_margin">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heigh_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundtext_card"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/usernameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsizeUsernameCard" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textcard" />

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textcard" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margintop_card"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />

                <TextView
                    android:id="@+id/likesNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    android:text="@string/likeNumberCard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textcard" />


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</android.support.v7.widget.CardView>